Fix price align #category page

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -636,7 +636,7 @@ header #_desktop_currency_selector .currency-selector .dropdown-menu,
 
 @media only screen and (max-width:720px){
  .modal-content{width:92%;margin-left:auto;margin-right:auto;}
- footer#footer .container .row .col-12.col-sm-12.col-md-3{border-bottom:1px solid #cccccc;}
+ footer#footer .container .row .col-12.col-sm-12.col-md-3{border-bottom:1px solid #cccccc;border-left:0px;}
  footer#footer .link-list-title{margin:0!important;padding-top:.4rem;padding-bottom:.4rem;font-size:1rem;}
  footer#footer .jxml-copyright{margin-top:1rem;}
 
